ok: Update allen-hmba-releases.yaml

--- a/datasets/allen-hmba-releases.yaml
+++ b/datasets/allen-hmba-releases.yaml
@@ -23,7 +23,7 @@ Resources:
   - Description: Project data files in a public bucket
     ARN: arn:aws:s3:::allen-hmba-releases
     Region: us-west-2
-    Type: S3 bucket
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: Human-Mammalian Brain - Basal Ganglia - Data
@@ -44,5 +44,6 @@ DataAtWork:
       URL:  Preprint in preparation.
       AuthorName: Johansen N.J., Fu Y., Schmitz M., et al.
       AuthorURL: https://alleninstitute.org/person/nelson-johansen/
+
 
 
