ok: Update ont_basemod_data.yaml

--- a/datasets/ont_basemod_data.yaml
+++ b/datasets/ont_basemod_data.yaml
@@ -13,7 +13,7 @@ Tags:
   - long read sequencing
   - bioinformatics
   - epigenomics
-  - benchmarking
+  - benchmark
   - bam
 License: "[MIT License](https://opensource.org/license/mit)"
 Citation: "Please cite Kulkarni et al. Comprehensive benchmarking of tools for nanopore-based detection of DNA methylation. bioRxiv (2024). doi: https://doi.org/10.1101/2024.11.09.622763 when referencing the ONT methylation benchmarking datasets in publications."
