ok: Update ont_basemod_data.yaml

--- a/datasets/ont_basemod_data.yaml
+++ b/datasets/ont_basemod_data.yaml
@@ -26,7 +26,7 @@ Resources:
   - Description: Notifications for object created
     ARN: arn:aws:sns:ap-south-1:767415906609:ont-basemod-benchmark-data-object_created
     Region: ap-south-1
-    Type: SNS topic
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: Methylation calling using ONT methylation benchmarking dataset
