ok: Update ont_basemod_data.yaml

--- a/datasets/ont_basemod_data.yaml
+++ b/datasets/ont_basemod_data.yaml
@@ -22,7 +22,7 @@ Resources:
     Region: ap-south-1
     Type: S3 Bucket
     Explore: 
-    - "[Browse Bucket](https://ont-basemod-benchmark-data.s3.amazonaws.com/index.html)"
+    - '[Browse Bucket](https://ont-basemod-benchmark-data.s3.amazonaws.com/index.html)'
   - Description: Notifications for object created
     ARN: arn:aws:sns:ap-south-1:767415906609:ont-basemod-benchmark-data-object_created
     Region: ap-south-1
@@ -32,8 +32,6 @@ DataAtWork:
     - Title: Methylation calling using ONT methylation benchmarking dataset
       URL: https://github.com/SowpatiLab/ont-basemod-benchmark-data/blob/main/tutorial.md
       AuthorName: Onkar Kulkarni
-      Services: 
-      - EC2
   Publications:
     - Title: Comprehensive benchmarking of tools for nanopore-based detection of DNA methylation
       URL: https://www.biorxiv.org/content/10.1101/2024.11.09.622763v1
