ok: Update ont_basemod_data.yaml

--- a/datasets/ont_basemod_data.yaml
+++ b/datasets/ont_basemod_data.yaml
@@ -1,8 +1,7 @@
 Name: ONT Methylation Benchmarking Datasets
 Description: ONT Methylation Benchmarking Datasets are generated to benchmark existing methylation-calling tools on the Oxford Nanopore sequencing platform using their recent R10.4.1 flowcell chemistry. It spans a diverse range of species, including bacteria (E. coli, H. pylori J99, H. pylori 26695, A. variabilis, T. denticola), plants (Rice, Arabidopsis), and mammals (mouse, human).In addition, the dataset includes EMSeq data for E. coli, plant, and mouse samples, which can serve as ground truth for methylation studies. It also provides unmethylated whole-genome amplified (WGA) DNA for H. pylori 26695 and a dam- dcm- double mutant (DM) of E. coli that lacks canonical 5mC and 6mA methylation. These variants, together with their wild-type counterparts, offer value for both training and benchmarking DNA methylation calling models.
 Documentation: https://github.com/SowpatiLab/ont-basemod-benchmark-data/blob/main/documentation.md
-Contact:
-  - "onkar.ccmb@csir.res.in; tej.ccmb@csir.res.in"
+Contact: "onkar.ccmb@csir.res.in; tej.ccmb@csir.res.in"
 ManagedBy: "[CSIR-Centre for Cellular and Molecular Biology](https://www.ccmb.res.in/)"
 UpdateFrequency: Datasets will be updated periodically as additional data is generated.
 Tags:
