Update and rename krepp-idx.yaml to kreppref.yaml

--- a/datasets/kreppref.yaml
+++ b/datasets/kreppref.yaml
@@ -14,7 +14,7 @@ Tags:
 License: GPL-3.0 license. Use of the data should be cited in the usual way, following https://github.com/bo1929/krepp/tree/master?tab=readme-ov-file#citation.
 Resources:
   - Description: This dataset contains genomic indexes for various reference datasets in binary format. Using krepp, you can perform distance estimation and phylogenetic placement with respect to these indexes.
-    ARN: arn:aws:s3:::krepp-idx
+    ARN: arn:aws:s3:::kreppref
     Region: us-west-1
     Type: S3 Bucket
 DataAtWork:
