ok: Update kreppref.yaml
Modified tags

--- a/datasets/kreppref.yaml
+++ b/datasets/kreppref.yaml
@@ -9,7 +9,7 @@ Tags:
   - metagenomics
   - microbiome
   - reference index
-  - phylogenetics
+  - aws-pds
   - life sciences
 License: GPL-3.0 license. Use of the data should be cited in the usual way, following https://github.com/bo1929/krepp/tree/master?tab=readme-ov-file#citation.
 Resources:
