--- a/datasets/ogs-arco-ocean.yaml
+++ b/datasets/ogs-arco-ocean.yaml
@@ -17,6 +17,11 @@ Tags:
   - zarr
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
 Citation: "Campanella, S., Salon, S., Querin, S., Bortolussi, L., and Stock, J.: ARCO-OCEAN: A dataset of physical properties of the ocean, waves, and sea ice, with hydrological and atmospheric forcing, optimized for machine learning, accessed on DD-MM-YYYY."
+Resources:
+  - Description: Zarr analysis ready data
+    ARN: arn:aws:s3:::ogs-arco-ocean
+    Region: eu-south-1
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: Computing the Oceanic El Nino Index (ONI) with Xarray and ARCO-OCEAN
