--- a/datasets/longbench.yaml
+++ b/datasets/longbench.yaml
@@ -17,7 +17,7 @@ Tags:
   - vcf
   - cancer
   - life sciences
-
+  - aws-pds
 License: CC BY-4.0
 Resources:
   - Description: Bulk, single-cell, and single-nucleus RNA-seq data from the LongBench project, covering eight human lung cancer cell lines. Bulk sequencing (FASTQ) was performed on ONT PCR-cDNA, ONT direct RNA (including pod5 files for RNA modification analysis), PacBio Kinnex, and Illumina platforms. Single-cell and single-nucleus sequencing (FASTQ) was performed on ONT PCR-cDNA, PacBio Kinnex, and Illumina platforms. Aligned reads (BAM), variant calls (VCF), and processed gene expression data are also provided, along with reference genome annotations (GTF and FASTA).
