ok: Update ogs-arco-ocean.yaml

--- a/datasets/ogs-arco-ocean.yaml
+++ b/datasets/ogs-arco-ocean.yaml
@@ -6,6 +6,7 @@ Contact: scampanella@ogs.it
 ManagedBy: "[OGS](https://www.ogs.it/en/dynamics-ecosystems-and-computational-oceanography)"
 UpdateFrequency: Variable (as needed).
 Tags:
+  - aws-pds
   - analysis ready data
   - atmosphere
   - climate
