ome-zarr-open-scivis: add citation and update contact email

--- a/datasets/ome-zarr-open-scivis.yaml
+++ b/datasets/ome-zarr-open-scivis.yaml
@@ -1,7 +1,7 @@
 Name: OME-Zarr Open SciVis Datasets
 Description: This project provides the Open SciVis Datasets in a chunked, highly-compressed, multi-scale format, encodes metadata in JSON according to the OME-Zarr specification, and hosts the datasets on AWS S3 through the AWS Open Data Program, aiming to serve as a web-based resource for the scientific visualization community to enhance reproducibility and facilitate testing and development of OME-Zarr tools.
 Documentation: https://github.com/InsightSoftwareConsortium/OMEZarrOpenSciVisDatasets
-Contact: "Matt McCormick <matt@mmmccormick.com>"
+Contact: "Matt McCormick <matt@fideus.io>"
 ManagedBy: "NumFOCUS"
 UpdateFrequency: On a biannual basis we update the datasets and sync with OME-Zarr standards.
 Tags:
@@ -16,6 +16,7 @@ Tags:
   - volumetric imaging
   - zarr
 License: CC-BY-4.0 unless otherwise specified
+Citation: McCormick, M. (2025). OME-Zarr Open SciVis Datasets (v2025.10.31). Zenodo. https://doi.org/10.5281/zenodo.17495294
 Resources:
   - Description: OME-Zarr Open SciVis Datasets
     ARN: arn:aws:s3:::ome-zarr-scivis
