ok: Update ome-zarr-open-scivis.yaml

--- a/datasets/ome-zarr-open-scivis.yaml
+++ b/datasets/ome-zarr-open-scivis.yaml
@@ -15,6 +15,7 @@ Tags:
   - computed tomography
   - volumetric imaging
   - zarr
+  - aws-pds
 License: CC-BY-4.0 unless otherwise specified
 Citation: McCormick, M. (2025). OME-Zarr Open SciVis Datasets (v2025.10.31). Zenodo. https://doi.org/10.5281/zenodo.17495294
 Resources:
