--- a/datasets/hprc-epigenome.yaml
+++ b/datasets/hprc-epigenome.yaml
@@ -22,21 +22,20 @@ Resources:
       Type: S3 Bucket
 DataAtWork:
     Tutorials:
-        - Title: Finding and Downloading HPRC Epigenome Data files
-          URL: https://epigenome.humanpangenome.org/
-          AuthorName: HPRCEB
+        - Title: |
+            Get To Know A Dataset: HPRC Epigenome
+          URL: https://github.com/twlab/open-data-examples/blob/main/get-to-know-hprc-epigenome.ipynb
+          AuthorName: HPRC Epigenome Browser
           AuthorURL: https://epigenome.humanpangenome.org/
     Publications:
+      - Title: A draft human pangenome reference
+        URL: https://doi.org/10.1038/s41586-023-05896-x
+        AuthorName: Liao, WW., Asri, M., Ebler, J. et al. 
       - Title: |
-        A draft human pangenome reference
-      URL: https://doi.org/10.1038/s41586-023-05896-x
-      AuthorName: Liao, WW., Asri, M., Ebler, J. et al. 
-      - Title: |
-        Modbed track: Visualization of modified bases in single-molecule sequencing
-      URL: https://www.sciencedirect.com/science/article/pii/S2666979X23002999?via%3Dihub
-      AuthorName: Daofeng Li, Xiaoyu Zhuo, Jessica K. Harrison, Shane Liu, Ting Wang
-      - Title: |
-        WashU Epigenome Browser update 2025
-      URL: https://doi.org/10.1093/nar/gkaf387
-      AuthorName: Chanrung Seng, Shane Liu, Wenjin Zhang, Xiaoyu Zhuo, Daofeng Li, Ting Wang 
+          Modbed track: Visualization of modified bases in single-molecule sequencing
+        URL: https://www.sciencedirect.com/science/article/pii/S2666979X23002999?via%3Dihub
+        AuthorName: Daofeng Li, Xiaoyu Zhuo, Jessica K. Harrison, Shane Liu, Ting Wang
+      - Title: WashU Epigenome Browser update 2025
+        URL: https://doi.org/10.1093/nar/gkaf387
+        AuthorName: Chanrung Seng, Shane Liu, Wenjin Zhang, Xiaoyu Zhuo, Daofeng Li, Ting Wang 
 
