Update s3 bucket and dataset tutorial

--- a/datasets/open-robo-care.yaml
+++ b/datasets/open-robo-care.yaml
@@ -13,11 +13,15 @@ License: "BSD-3-Clause license - Academic and non-commercial use permitted. See 
 Citation: "Liang, X., Liu, Z., Lin, K., Gu, E., Ye, R., Nguyen, T., Hsu, C., Wu, Z., Yang, X., Cheung, C.S.Y., Soh, H., Dimitropoulou, K., & Bhattacharjee, T. (2025). OpenRoboCare: A Multimodal Multi-Task Expert Demonstration Dataset for Robot Caregiving. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)."
 Resources:
   - Description: Full Dataset
-    ARN: arn:aws:s3:::openrobocare
-    Region: us-east-1
+    ARN: arn:aws:s3:::open-robo-care
+    Region: us-west-2
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
+    - Title: Get To Know A Dataset: OpenRoboCare
+      URL: https://github.com/empriselab/open-data-examples/blob/main/open-robo-care/get-to-know-a-dataset.ipynb
+      AuthorName: Cornell University EmPRISE Lab
+      AuthorURL: https://emprise.cs.cornell.edu/
     - Title: OpenRoboCare Dataset Viewer
       URL: https://emprise.cs.cornell.edu/robo-care-viewer/
       AuthorName: Cornell University EmPRISE Lab
