ok: Update open-robo-care.yaml

--- a/datasets/open-robo-care.yaml
+++ b/datasets/open-robo-care.yaml
@@ -9,6 +9,8 @@ Tags:
   - robotics
   - machine learning
   - health
+  - aws-pds
+  - life sciences
 License: "BSD-3-Clause license - Academic and non-commercial use permitted. See documentation for full terms."
 Citation: "Liang, X., Liu, Z., Lin, K., Gu, E., Ye, R., Nguyen, T., Hsu, C., Wu, Z., Yang, X., Cheung, C.S.Y., Soh, H., Dimitropoulou, K., & Bhattacharjee, T. (2025). OpenRoboCare: A Multimodal Multi-Task Expert Demonstration Dataset for Robot Caregiving. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)."
 Resources:
