Fix title and link

--- a/datasets/allen-nd-ephys-hybrid-evaluation.yaml
+++ b/datasets/allen-nd-ephys-hybrid-evaluation.yaml
@@ -1,6 +1,6 @@
-Name: Allen Institute for Neural Dynamics - Extracellular Electrophysiology Compression Benchmark
+Name: Allen Institute for Neural Dynamics - Extracellular Electrophysiology Hybrid Evaluation Benchmark
 Description: Evaluation of spike sorting methods is a challenging task, as it requires both ground-truth data and a variety of sorting algorithms to compare against. This dataset contains a set of hybrid data specifically designed for benchmarking spike sorting methods.
-Documentation: https://allenneuraldynamics.github.io/data.html#aind-benchmark-dataephys-evaluation
+Documentation: https://allenneuraldynamics.github.io/data.html#aind-benchmark-dataephys-hybrid-evaluation
 Contact: aindopendata@alleninstitute.org
 ManagedBy: "[Allen Institute](http://neuraldynamics.alleninstitute.org/)"
 UpdateFrequency: Weekly
@@ -29,4 +29,3 @@ DataAtWork:
       URL: TODO
       AuthorName: Alessio P. Buccino, Arjun Sridhar, David Feng, Karel Svoboda, Joshua H. Siegle.
       AuthorURL: http://neuraldynamics.alleninstitute.org/
-
