ok: Update open-robo-care.yaml

--- a/datasets/open-robo-care.yaml
+++ b/datasets/open-robo-care.yaml
@@ -20,7 +20,7 @@ Resources:
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
-    - Title: Get To Know A Dataset: OpenRoboCare
+    - Title: "Get To Know A Dataset: OpenRoboCare"
       URL: https://github.com/empriselab/open-data-examples/blob/main/open-robo-care/get-to-know-a-dataset.ipynb
       AuthorName: Cornell University EmPRISE Lab
       AuthorURL: https://emprise.cs.cornell.edu/
