ok: Update openfold3.yaml

--- a/datasets/openfold3.yaml
+++ b/datasets/openfold3.yaml
@@ -5,15 +5,14 @@ Contact: https://github.com/aqlaboratory/openfold3-training-data-RODA/issues
 ManagedBy: OpenFold
 UpdateFrequency: Never
 Tags:
-  - openfold3
+  - openfold
   - msa
   - protein
   - protein template
   - protein folding
-  - alphafold3
   - open source software
   - life sciences
-  - aws
+  - aws-pds
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
 Citation: "Additionally, please cite [our prior manuscript](https://www.nature.com/articles/s41592-024-02272-z)."
 Resources:
