--- a/datasets/eba.yaml
+++ b/datasets/eba.yaml
@@ -13,8 +13,8 @@ License: CC BY-NC-SA 4.0
 Citation:
 Resources:
   - Description: Bitcoin Graph in TSV format and Neo4j database dump
-    ARN: 
-    Region: 
+    ARN: arn:aws:s3:::bitcoin-graph
+    Region: US West (Oregon) us-west-2
     Type:
     Explore:
 DataAtWork:
