Specify S3 Bucket type in eba.yaml

--- a/datasets/eba.yaml
+++ b/datasets/eba.yaml
@@ -15,8 +15,7 @@ Resources:
   - Description: Bitcoin Graph in TSV format and Neo4j database dump
     ARN: arn:aws:s3:::bitcoin-graph
     Region: US West (Oregon) us-west-2
-    Type:
-    Explore:
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: Bitcoin address clustering using its neighborhood
