Enhance dataset description for Bitcoin Graph

--- a/datasets/eba.yaml
+++ b/datasets/eba.yaml
@@ -1,5 +1,5 @@
 Name: Bitcoin Graph 
-Description: Temporal Graph of Bitcoin Transactions
+Description: A temporal graph of Bitcoin transactions that encompasses the complete trading details of over 8.72 billion BTC, consisting of over 2.4 billion nodes and 39.72 billion time-stamped edges spanning more than a decade. This makes it a complete resource for developing models on Bitcoin and a large-scale resource for benchmarking graph neural networks.
 Documentation: https://eba.b1aab.ai
 Contact: https://github.com/B1AAB/EBA/issues
 ManagedBy: Vahid Jalili
