--- a/datasets/ALFREDonAWS.yaml
+++ b/datasets/ALFREDonAWS.yaml
@@ -10,7 +10,11 @@ Tags:
   - genotyping
   - bioinformatics
 License: ALFRED data must not be used in ways that promote stigma or discrimination against any individual or ethnic group..
+DataAtWork:
+  Tutorials:https://github.com/haseenaR/ALFRED/blob/main/alfred-dataset-tutorial.ipynb
+  
 Publications:
     - Title: ALFRED: an allele frequency resource for research and teaching
       URL: https://pubmed.ncbi.nlm.nih.gov/22039151/
+
       AuthorName: Haseena Rajeevan, Usha Soundararajan, Judith R Kidd, Andrew J Pakstis & Kenneth K Kidd   
