--- a/datasets/ALFREDonAWS.yaml
+++ b/datasets/ALFREDonAWS.yaml
@@ -11,10 +11,15 @@ Tags:
   - bioinformatics
 License: ALFRED data must not be used in ways that promote stigma or discrimination against any individual or ethnic group..
 DataAtWork:
-  Tutorials:https://github.com/haseenaR/ALFRED/blob/main/alfred-dataset-tutorial.ipynb
+  Tutorials:
+  Title: Get to Know a Dataset: ALFRED (The Allele Frequency Database)
+  URL: https://github.com/haseenaR/ALFRED/blob/main/alfred-dataset-tutorial.ipynb
+  AuthorName: Haseena Rajeevan, Peter Schmiedeskamp
+  
   
 Publications:
     - Title: ALFRED: an allele frequency resource for research and teaching
       URL: https://pubmed.ncbi.nlm.nih.gov/22039151/
 
       AuthorName: Haseena Rajeevan, Usha Soundararajan, Judith R Kidd, Andrew J Pakstis & Kenneth K Kidd   
+
