Update ASTER L1T entry

--- a/datasets/aster-l1t.yaml
+++ b/datasets/aster-l1t.yaml
@@ -19,8 +19,8 @@ Description: |
   [here](https://github.com/awslabs/open-data-docs/tree/main/docs/aster-l1t).
 
 Documentation: https://github.com/awslabs/open-data-docs/tree/main/docs/aster-l1t
-Contact: opendata@descarteslabs.com
-ManagedBy: "[Descartes Labs](https://descarteslabs.com/)"
+Contact: support@earthdaily.com
+ManagedBy: "[EarthDaily Analytics](https://earthdaily.com/)"
 UpdateFrequency: Daily
 Collabs:
   ASDI:
@@ -55,10 +55,10 @@ DataAtWork:
       AuthorName: Cole Krehbiel
       AuthorURL: https://lpdaac.usgs.gov/
   Tools & Applications:
-    - Title: Descartes Labs Platform
-      URL: https://descarteslabs.com/platform
-      AuthorName: Descartes Labs Inc.
-      AuthorURL: https://descarteslabs.com
+    - Title: EarthDaily EarthOne Platform
+      URL: https://docs.earthone.earthdaily.com/
+      AuthorName: EarthDaily Analytics
+      AuthorURL: https://earthdaily.com
     - Title: Latitude-Longitude to Path-Row conversion
       URL: "https://landsat.usgs.gov/landsat_acq#convertPathRow"
       AuthorName: USGS
