Update LPDAAC links

--- a/datasets/aster-l1t.yaml
+++ b/datasets/aster-l1t.yaml
@@ -20,7 +20,7 @@ Description: |
 
 Documentation: https://github.com/awslabs/open-data-docs/tree/main/docs/aster-l1t
 Contact: support@earthdaily.com
-ManagedBy: "[EarthDaily Analytics](https://earthdaily.com/)"
+ManagedBy: "[EarthDaily](https://earthdaily.com/)"
 UpdateFrequency: Daily
 Collabs:
   ASDI:
@@ -51,13 +51,13 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: Working with ASTER L1T Visible and Near Infrared (VNIR) Data in R
-      URL: https://lpdaac.usgs.gov/documents/128/ASTER_L1T_Tutorial.html
+      URL: https://git.earthdata.nasa.gov/projects/LPDUR/repos/aster-l1t/browse
       AuthorName: Cole Krehbiel
-      AuthorURL: https://lpdaac.usgs.gov/
+      AuthorURL: https://www.earthdata.nasa.gov/centers/lp-daac
   Tools & Applications:
     - Title: EarthDaily EarthOne Platform
       URL: https://docs.earthone.earthdaily.com/
-      AuthorName: EarthDaily Analytics
+      AuthorName: EarthDaily
       AuthorURL: https://earthdaily.com
     - Title: Latitude-Longitude to Path-Row conversion
       URL: "https://landsat.usgs.gov/landsat_acq#convertPathRow"
