ok: Update ember.yaml

--- a/datasets/ember.yaml
+++ b/datasets/ember.yaml
@@ -33,6 +33,7 @@ Tags:
   - Homo sapiens
   - Mus musculus
   - non-human primate
+  - aws-pds
 License: Creative Commons 4.0 International (CC BY 4.0)
 Resources:
   - Description: Time series neurophysiology and behavioral data from animal and human (deidentified)
