--- a/datasets/ember.yaml
+++ b/datasets/ember.yaml
@@ -44,4 +44,4 @@ DataAtWork:
   Publications:
     - Title: Mapping the landscape of social behavior
       URL: https://pubmed.ncbi.nlm.nih.gov/40043703/
-      AuthorName: Ugne Klibaite, Tianqing Li, Diego Aldarondo, Jumana F Akoad, Bence P Ölveczky, Timothy W Dunn 
+      AuthorName: Ugne Klibaite, Tianqing Li, Diego Aldarondo, Jumana F Akoad, Bence P Ölveczky, Timothy W Dunn. 
