Add publication details to RSNA datasets

--- a/datasets/rsna-intracranial-aneurysm-detection-dataset.yaml
+++ b/datasets/rsna-intracranial-aneurysm-detection-dataset.yaml
@@ -21,3 +21,8 @@ Resources:
     Region: us-west-2
     Type: S3 Bucket
     ControlledAccess: https://mira.rsna.org/dataset/7
+DataAtWork:
+  Publications:
+    - Title: The RSNA Intercranial Aneurysm Detection Dataset
+      URL: https://pubs.rsna.org/doi/full/10.1148/ryai.2021200254
+      AuthorName: Authors, Various
