--- a/datasets/rsna-lumbar-spine-degenerative-classification-dataset.yaml
+++ b/datasets/rsna-lumbar-spine-degenerative-classification-dataset.yaml
@@ -21,3 +21,8 @@ Resources:
     Region: us-west-2
     Type: S3 Bucket
     ControlledAccess: https://mira.rsna.org/dataset/6
+DataAtWork:
+  Publications:
+    - Title: The RSNA Lumbar Spine Degenerative Classification Dataset
+      URL: https://pubs.rsna.org/doi/full/10.1148/ryai.2021200254
+      AuthorName: Authors, Various
