Revise dataset resources in chammi.yaml
Updated dataset information for CHAMMI-75.

--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -23,11 +23,10 @@ Tags:
 License: CC BY 4.0 License
 Citation: 
 Resources:
-  - Description: Images, training set and evaluation set available in an S3 bucket
-    ARN:
-    Region:
-    Type:
-    Explore:
+  - Description: CHAMMI-75 Dataset: Images, training set and evaluation set available in an S3 bucket
+    ARN: arn:aws:s3:::chammi-data
+    Region: us-west-2
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: Get To Know A Dataset: CHAMMI-75
