Updating DMI opendata documentation links

--- a/datasets/dmi-opendata.yaml
+++ b/datasets/dmi-opendata.yaml
@@ -1,7 +1,7 @@
 Name: Danish Meteorological Institute (DMI) Open Data Forecasts
 Description: DMI forecast data consist of various models where each model contains different set of parameters relating to a specific domain like ocean (WAM), storm flooding (DKSS) or weather (HARMONIE)
-Documentation: https://opendatadocs.dmi.govcloud.dk/en/Data/Forecast_Data
-Contact: https://opendatadocs.dmi.govcloud.dk/en/API_Status_and_Contact
+Documentation: https://www.dmi.dk/friedata/dokumentation/forecast-data
+Contact: https://www.dmi.dk/friedata/dokumentation/api-status-contact
 ManagedBy: "[Danish Meteorological Institute](https://www.dmi.dk/)"
 UpdateFrequency: Every hour, 3 hours or 6 hours depending on model
 Collabs:
