--- a/datasets/snpeff.yaml
+++ b/datasets/snpeff.yaml
@@ -19,6 +19,7 @@ Tags:
   - whole exome sequencing
   - transcriptomics
   - structural variation
+  - aws-pds
 License: "[MIT License](https://opensource.org/licenses/MIT)"
 Resources:
   - Description: "Pre-built genomic databases for many reference genomes including human (GRCh37, GRCh38), mouse, rat, and other model organisms. Each database contains gene annotations, transcript information, protein sequences, and regulatory elements required for variant annotation."
