--- a/datasets/snpeff.yaml
+++ b/datasets/snpeff.yaml
@@ -3,6 +3,11 @@ Description: "SnpEff is a variant annotation and effect prediction tool that ann
 Contact: Pablo Cingolani <http://www.linkedin.com/in/pablocingolani>
 Documentation: https://pcingola.github.io/SnpEff/
 ManagedBy: "[Pablo Cingolani](http://www.linkedin.com/in/pablocingolani)"
+Resources:
+  - Description:
+    ARN: arn:aws:s3:::snpeff-public
+    Region: us-east-2
+    Type: S3 Bucket
 UpdateFrequency: Monthly
 Tags:
   - life sciences
