--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -8,7 +8,7 @@ Description: |
   which could process microscopy images of varying technical specifications and regardless of the number of channels. By breaking the limitations of existing models, 
   CHAMMI-75 is an invaluable resource for creating the next generation of foundation models for image-based biological research.  
 Documentation: https://github.com/CaicedoLab/CHAMMI-75
-Contact: Contact via email Juan Caicedo, juan.caicedo@wisc.edu
+Contact: Juan Caicedo, juan.caicedo@wisc.edu
 ManagedBy: Morgridge Institute for Research
 UpdateFrequency: Every 2 years
 Tags:
@@ -20,41 +20,34 @@ Tags:
   - high-throughput imaging
   - cell imaging
   - fluorescence imaging
+  - aws-pds
 License: CC BY 4.0 License
 Citation: 
 Resources:
-  - Description: CHAMMI-75 Dataset: Images, training set and evaluation set available in an S3 bucket
+  - Description: "CHAMMI-75 Dataset: Images, training set and evaluation set available in an S3 bucket"
     ARN: arn:aws:s3:::chammi-data
     Region: us-west-2
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
-    - Title: Get To Know A Dataset: CHAMMI-75
+    - Title: "Get To Know A Dataset: CHAMMI-75"
       URL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
       NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/get-to-know-a-dataset-template.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
-      AuthorURL:
-      Services: Getting to know a dataset
     - Title: Running CHAMMI-75 Evaluation Benchmarks
       URL:  https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
       NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/running-benchmarks.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
-      Author URL:
-      Services: It will enable researchers to run state of the art benchmarks in the exploration of single cell self-supervised learning foundation models.
   Tools & Applications:
     - Title: CHAMMI-75 Source Code
       URL: https://github.com/CaicedoLab/CHAMMI-75
       AuthorName: Vidit Agrawal
-      AuthorURL:
     - Title: CHAMMI Benchmarking Source Code
       URL: https://github.com/chaudatascience/channel_adaptive_models
       AuthorName: Chau Pham
-      AuthorURL: 
   Publications:
     - Title: CHAMMI: A benchmark for channel-adaptive models in microscopy imaging
       URL: https://neurips.cc/virtual/2023/poster/73620
       AuthorName: Zitong Sam Chen, Chau Pham, Siqi Wang, Michael Doron, Nikita Moshkov, Bryan Plummer, Juan C. Caicedo
-      AuthorURL:
-DeprecatedNotice:
 ADXCategories:
   -    Healthcare & Life Sciences Data
