Fix Tutorials link in run_dbcan-database.yaml
Updated the Tutorials link to point to the official documentation.

--- a/datasets/run_dbcan-database.yaml
+++ b/datasets/run_dbcan-database.yaml
@@ -20,7 +20,7 @@ Resources:
     Explore:
     - '[Browse Bucket](NA)' #SHOULD BE CHANGED
 DataAtWork:
-  Tutorials:
+  Tutorials: https://run-dbcan.readthedocs.io/en/latest/
   Tools & Applications:
     - Title: run_dbcan
       URL: https://run-dbcan.readthedocs.io/en/latest/
