--- a/datasets/oedi-data-lake.yaml
+++ b/datasets/oedi-data-lake.yaml
@@ -131,7 +131,13 @@ Resources:
     Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=building-sector-scenarios%2F&limit=50)' 
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=buildings-sector-scenarios%2F&limit=50)' 
+  - Description: "[U.S. Agrivoltaic Irradiance Database](https://data.openei.org/submissions/8568)"
+    ARN: arn:aws:s3:::oedi-data-lake/inspire/agrivoltaics_irradiance/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=inspire%2Fagrivoltaics_irradiance%2F&limit=50)' 
 DataAtWork:
   Tools & Applications:
     - Title: "Tracking the Sun Tool"
