--- a/datasets/canelevation-pointcloud.yaml
+++ b/datasets/canelevation-pointcloud.yaml
@@ -49,13 +49,13 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: How to generate a digital elevation model (DEM) from a lidar point cloud in COPC LAZ format | Comment générer un modèle numérique d'élévation (MNE) à partir d'un nuage de point lidar en format COPC LAZ
-      URL: https://github.com/NRCan/CanElevation/blob/main/pointclouds_nuagespoints/DEM_from_COPC_lidar_EN.ipynb
-      NotebookURL: https://github.com/NRCan/CanElevation/blob/main/pointclouds_nuagespoints/DEM_from_COPC_lidar_EN.ipynb
+      URL: https://nrcan.github.io/CanElevation/pointclouds/dem-from-copc-lidar/
+      NotebookURL: https://nrcan.github.io/CanElevation/pointclouds/DEM_from_COPC_lidar_EN.ipynb
       AuthorName: NRCan
     - Title: Identify projects and lidar tiles covering a region of interest | Déterminer les projets et les tuiles lidars couvrant une région d'intérêt
-      URL: https://github.com/NRCan/CanElevation/blob/main/pointclouds_nuagespoints/Get_Projects_Tiles_by_AOI_EN.ipynb
-      NotebookURL: https://github.com/NRCan/CanElevation/blob/main/pointclouds_nuagespoints/Get_Projects_Tiles_by_AOI_EN.ipynb
+      URL: https://nrcan.github.io/CanElevation/pointclouds/projects-tiles-by-aoi/
+      NotebookURL: https://nrcan.github.io/CanElevation/pointclouds/Get_Projects_Tiles_by_AOI_EN.ipynb
       AuthorName: NRCan
     - Title: Using the LiDAR Point Clouds - CanElevation Series product in QGIS | Utilisation du produit Nuages de points lidar - Série CanÉlévation dans QGIS
-      URL: https://github.com/jsmoreau/CanElevation/blob/main/pointclouds_nuagespoints/QGIS_interactive_EN.md
+      URL: https://nrcan.github.io/CanElevation/pointclouds/qgis-interactive/
       AuthorName: NRCan
