--- a/datasets/canelevation-pointcloud.yaml
+++ b/datasets/canelevation-pointcloud.yaml
@@ -45,6 +45,7 @@ Resources:
     Type: S3 Bucket
     Explore: 
     - '[LiDAR Data on Open Canada](https://open.canada.ca/data/en/dataset/7069387e-9986-4297-9f55-0288e9676947)'
+    - '[Browse Bucket](https://canelevation-lidar-point-clouds.s3.ca-central-1.amazonaws.com/pointclouds_nuagespoints/index.html#pointclouds_nuagespoints/)'
 
 DataAtWork:
   Tutorials:
