ok: Update frag-struc.yaml

--- a/frag-struc.yaml
+++ b/frag-struc.yaml
@@ -13,6 +13,7 @@ Tags:
   - bulk RNA sequencing
   - bioinformatics
   - bigwig
+  - aws-pds
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
 Citation: "In addition, please cite Yuk Kei Wan and Leonard Schärfen Hidden structural information in RNA sequencing data."
 Resources: 
