ok: Update chammi.yaml

--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -46,8 +46,8 @@ DataAtWork:
       URL: https://github.com/chaudatascience/channel_adaptive_models
       AuthorName: Chau Pham
   Publications:
-    - Title: CHAMMI: A benchmark for channel-adaptive models in microscopy imaging
+    - Title: "CHAMMI: A benchmark for channel-adaptive models in microscopy imaging"
       URL: https://neurips.cc/virtual/2023/poster/73620
       AuthorName: Zitong Sam Chen, Chau Pham, Siqi Wang, Michael Doron, Nikita Moshkov, Bryan Plummer, Juan C. Caicedo
 ADXCategories:
-  -    Healthcare & Life Sciences Data
+  -   Healthcare & Life Sciences Data
