--- a/datasets/ivrit-ai-audio-v2.yaml
+++ b/datasets/ivrit-ai-audio-v2.yaml
@@ -26,6 +26,9 @@ DataAtWork:
     - Title: "Building an Accurate Open-Source Hebrew ASR System through Crowdsourcing"
       URL: https://www.isca-archive.org/interspeech_2025/marmor25_interspeech.pdf
       AuthorName: Marmor, Yanir et al.
+    - Title: "Get to Know the ivrit-ai Hebrew Audio v2 Dataset"
+      URL: https://github.com/yanirmr/notebooks/blob/main/how_to_use_ivrit_ai_audio_v2.ipynb
+      AuthorName: ivrit.ai
 Tools & Applications: []
 Publications:
   - Title: "Building an Accurate Open-Source Hebrew ASR System through Crowdsourcing"
