Add tutorial for ivrit-ai Crowd-Transcribe v5 dataset

--- a/datasets/ivrit-ai-crowdtranscribe.yaml
+++ b/datasets/ivrit-ai-crowdtranscribe.yaml
@@ -27,6 +27,9 @@ DataAtWork:
     - Title: "Building an Accurate Open-Source Hebrew ASR System through Crowdsourcing"
       URL: https://www.isca-archive.org/interspeech_2025/marmor25_interspeech.pdf
       AuthorName: Marmor, Yanir et al.
+    - Title: "Get to Know the ivrit-ai Crowd-Transcribe v5 Dataset"
+      URL: https://github.com/yanirmr/notebooks/blob/main/how_to_use_ivrit_ai_Crowd_Transcribe_v5.ipynb
+      AuthorName: ivrit.ai
 Tools & Applications: []
 Publications:
   - Title: "Building an Accurate Open-Source Hebrew ASR System through Crowdsourcing"
