ok: Update hprc-epigenome.yaml

--- a/datasets/hprc-epigenome.yaml
+++ b/datasets/hprc-epigenome.yaml
@@ -10,10 +10,9 @@ Tags:
     - bioinformatics
     - genetic
     - genomic
+    - epigenomics
     - life sciences
-    - PacBio
-    - ONT
-    - Fiber-seq
+    - aws-pds
 License: External data users may freely download, analyze, and publish results based on any HPRC data provided here without restrictions.
 Resources:
     - Description: HPRC Epigenome Browser
