ok: Update hprc-epigenome.yaml

--- a/datasets/hprc-epigenome.yaml
+++ b/datasets/hprc-epigenome.yaml
@@ -22,7 +22,7 @@ Resources:
 DataAtWork:
     Tutorials:
         - Title: |
-            Get To Know A Dataset: HPRC Epigenome
+            "Get To Know A Dataset: HPRC Epigenome"
           URL: https://github.com/twlab/open-data-examples/blob/main/get-to-know-hprc-epigenome.ipynb
           AuthorName: HPRC Epigenome Browser
           AuthorURL: https://epigenome.humanpangenome.org/
@@ -31,7 +31,7 @@ DataAtWork:
         URL: https://doi.org/10.1038/s41586-023-05896-x
         AuthorName: Liao, WW., Asri, M., Ebler, J. et al. 
       - Title: |
-          Modbed track: Visualization of modified bases in single-molecule sequencing
+          "Modbed track: Visualization of modified bases in single-molecule sequencing"
         URL: https://www.sciencedirect.com/science/article/pii/S2666979X23002999?via%3Dihub
         AuthorName: Daofeng Li, Xiaoyu Zhuo, Jessica K. Harrison, Shane Liu, Ting Wang
       - Title: WashU Epigenome Browser update 2025
