Adding resource details.

--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -35,3 +35,8 @@ DataAtWork:
   Tutorials:
     - Title: NVIDIA Trustworthy AI GitHub
       URL: https://github.com/NVIDIA/Trustworthy-AI
+Resources:
+  - Description: ASL 1000 Data
+    ARN: arn:aws:s3:::trustworthyaiproduct
+    Region: us-east-2
+    Type: S3 Bucket
