--- a/datasets/dynamical-noaa-gfs.yaml
+++ b/datasets/dynamical-noaa-gfs.yaml
@@ -1,6 +1,6 @@
 Name: NOAA GFS
 Description: |
-  
+      
       <p>
       The Global Forecast System (GFS) is a National Oceanic and Atmospheric
       Administration (NOAA) National Centers for Environmental Prediction
@@ -10,18 +10,19 @@ Description: |
       system couples four separate models (atmosphere, ocean model, land/soil
       model, and sea ice) that work together to depict weather conditions.
       </p>
-    
-  These datasets have been translated to cloud-optimized Icechunk Zarr format by <a href="https://dynamical.org">dynamical.org</a>.
-  <ul>
+      
+      These datasets have been translated to cloud-optimized Icechunk Zarr format by <a href="https://dynamical.org">dynamical.org</a>.
+      <ul>
   
-  <li><a href="https://dynamical.org/catalog/noaa-gfs-forecast/">NOAA GFS forecast</a> - Weather forecasts from the Global Forecast System (GFS) operated by NOAA NWS NCEP.</li>
+      <li><a href="https://dynamical.org/catalog/noaa-gfs-forecast/">NOAA GFS forecast</a> - Weather forecasts from the Global Forecast System (GFS) operated by NOAA NWS NCEP.</li>
   
-  </ul>
+      </ul>
 Documentation: https://dynamical.org/catalog/gfs/'
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
 UpdateFrequency: NOAA GFS forecast: Forecasts initialized every 6 hours
 Tags:
+  - aws-pds
   - weather
   - atmosphere
   - meteorological
