ok: Update dynamical-noaa-gfs.yaml

--- a/datasets/dynamical-noaa-gfs.yaml
+++ b/datasets/dynamical-noaa-gfs.yaml
@@ -20,7 +20,7 @@ Description: |
 Documentation: https://dynamical.org/catalog/gfs/
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
-UpdateFrequency: NOAA GFS forecast: Forecasts initialized every 6 hours
+UpdateFrequency: "NOAA GFS forecast: Forecasts initialized every 6 hours"
 Tags:
   - aws-pds
   - weather
