--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -11,8 +11,8 @@ UpdateFrequency: New data is added as soon as it is available.
 License: Please see the NVIDIA Dataset License
 DataAtWork:
   Tutorials:
-    - Title: NVIDIA Trustworthy AI GitHub
-      URL: https://github.com/NVIDIA/Trustworthy-AI/blob/main/ASL%20Developer%20Community/notebooks/asl_data_pipeline.ipynb
+    - Title: ASL Data Pipeline
+      URL: https://github.com/NVIDIA/Trustworthy-AI/tree/main/ASL%20Developer%20Community
 Resources:
   - Description: ASL 1000 Data
     ARN: arn:aws:s3:::trustworthyaiproduct
