--- a/datasets/dynamical-noaa-gfs.yaml
+++ b/datasets/dynamical-noaa-gfs.yaml
@@ -1,7 +1,7 @@
 Name: NOAA GFS
 Description: |
-      
-      <p>
+  <div>
+    <p>
       The Global Forecast System (GFS) is a National Oceanic and Atmospheric
       Administration (NOAA) National Centers for Environmental Prediction
       (NCEP) weather forecast model that generates data for dozens of
@@ -10,13 +10,12 @@ Description: |
       system couples four separate models (atmosphere, ocean model, land/soil
       model, and sea ice) that work together to depict weather conditions.
       </p>
-      
-      These datasets have been translated to cloud-optimized Icechunk Zarr format by <a href="https://dynamical.org">dynamical.org</a>.
-      <ul>
-  
+    <p>These datasets have been translated to cloud-optimized Icechunk Zarr format by <a href="https://dynamical.org">dynamical.org</a>.</p>
+    <p>When Icechunk 2.0 is released, these datasets will be updated correspondingly, and updated client libraries will be required for access. To be notified of dataset updates, subscribe to the <a href='https://dynamical.org/updates/'>mailing list</a>.</p>
+    <ul>
       <li><a href="https://dynamical.org/catalog/noaa-gfs-forecast/">NOAA GFS forecast</a> - Weather forecasts from the Global Forecast System (GFS) operated by NOAA NWS NCEP.</li>
-  
-      </ul>
+    </ul>
+  </div>
 Documentation: https://dynamical.org/catalog/gfs/
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
@@ -37,9 +36,14 @@ Resources:
     Type: S3 Bucket
     Explore:
       - "[Browse Bucket](https://dynamical-noaa-gfs.s3.amazonaws.com/index.html)"
+  - Description: Notifications for dataset updates
+    ARN: arn:aws:sns:us-west-2:761136292730:dynamical-noaa-gfs-object_created
+    Region: us-west-2
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: NOAA GFS forecast python quickstart notebook
+      URL: https://github.com/dynamical-org/notebooks/blob/main/noaa-gfs-forecast-icechunk.ipynb
       NotebookURL: https://github.com/dynamical-org/notebooks/blob/main/noaa-gfs-forecast-icechunk.ipynb
       AuthorName: dynamical.org
       AuthorURL: https://dynamical.org
