ok: Update asl_1000.yaml

--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -8,6 +8,9 @@ The annotations for this dataset were generated using an automated data pipeline
 Contact: trustworthyaiprojects@nvidia.com
 ManagedBy: See all datasets managed by NVIDIA Corporation
 UpdateFrequency: New data is added as soon as it is available.
+Tags:
+  - aws-pds
+  - video
 License: Please see the NVIDIA Dataset License
 DataAtWork:
   Tutorials:
