--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -1,16 +1,12 @@
 Name: ASL 1000
-Description: |
-Overview
-This dataset provides a high-fidelity collection of American Sign Language (ASL) videos annotated with 2D landmarks for hands, pose, and face. The data is designed to train advanced research and development in ASL recognition, translation, gesture analysis, and computer animation.
-
-The annotations for this dataset were generated using an automated data pipeline to pre-annotate keyframes from the source videos. As a final, critical step, all automated annotations were subsequently reviewed and meticulously corrected by human labellers to ensure the highest level of accuracy and reliability, making it suitable for training production-grade machine learning models.
-
+Description: This dataset provides a high-fidelity collection of American Sign Language (ASL) videos annotated with 2D landmarks for hands, pose, and face. The data is designed to train advanced research and development in ASL recognition, translation, gesture analysis, and computer animation. The annotations for this dataset were generated using an automated data pipeline to pre-annotate keyframes from the source videos. As a final, critical step, all automated annotations were subsequently reviewed and meticulously corrected by human labellers to ensure the highest level of accuracy and reliability, making it suitable for training production-grade machine learning models.
 Contact: trustworthyaiprojects@nvidia.com
-ManagedBy: See all datasets managed by NVIDIA Corporation
+ManagedBy: "[NVIDIA Corporation](https://www.nvidia.com/en-us/)"
 UpdateFrequency: New data is added as soon as it is available.
 Tags:
   - aws-pds
   - video
+  - machine learning
 License: Please see the NVIDIA Dataset License
 DataAtWork:
   Tutorials:
