Updating the license.

--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -1,6 +1,6 @@
 Name: ASL 1000
 Description: This dataset provides a high-fidelity collection of American Sign Language (ASL) videos annotated with 2D landmarks for hands, pose, and face. The data is designed to train advanced research and development in ASL recognition, translation, gesture analysis, and computer animation. The annotations for this dataset were generated using an automated data pipeline to pre-annotate keyframes from the source videos. As a final, critical step, all automated annotations were subsequently reviewed and meticulously corrected by human labellers to ensure the highest level of accuracy and reliability, making it suitable for training production-grade machine learning models.
-Documentation: "URL or description of documentation"
+Documentation: "https://github.com/NVIDIA/Trustworthy-AI/tree/main/ASL%20Developer%20Community"
 Contact: trustworthyaiprojects@nvidia.com
 ManagedBy: "[NVIDIA Corporation](https://www.nvidia.com/en-us/)"
 UpdateFrequency: New data is added as soon as it is available.
@@ -8,12 +8,12 @@ Tags:
   - aws-pds
   - video
   - machine learning
-License: Please see the NVIDIA Dataset License
+License: "Please see the [NVIDIA Dataset License](https://github.com/NVIDIA/Trustworthy-AI/blob/main/ASL%20Developer%20Community/NVIDIA%20Data%20License%20for%20ASL%20Project.pdf)"
 DataAtWork:
   Tutorials:
     - Title: ASL Data Pipeline
-      URL: https://github.com/NVIDIA/Trustworthy-AI/tree/main/ASL%20Developer%20Community
-      AuthorName: "Name of the author"
+      URL: https://github.com/NVIDIA/Trustworthy-AI/blob/main/ASL%20Developer%20Community/notebooks/asl_data_pipeline.ipynb
+      AuthorName: "NVIDIA"
 Resources:
   - Description: ASL 1000 Data
     ARN: arn:aws:s3:::trustworthyaiproduct
