--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -3,7 +3,7 @@ Description: This dataset provides a high-fidelity collection of American Sign L
 Documentation: "https://github.com/NVIDIA/Trustworthy-AI/tree/main/ASL%20Developer%20Community"
 Contact: trustworthyaiprojects@nvidia.com
 ManagedBy: "[NVIDIA Corporation](https://www.nvidia.com/en-us/)"
-UpdateFrequency: New data is added as soon as it is available.
+UpdateFrequency: New data added as soon as it is available.
 Tags:
   - aws-pds
   - video
