Fix links to dynamical.org model documentation pages

--- a/datasets/dynamical-noaa-gfs.yaml
+++ b/datasets/dynamical-noaa-gfs.yaml
@@ -16,7 +16,7 @@ Description: |
       <li><a href="https://dynamical.org/catalog/noaa-gfs-forecast/">NOAA GFS forecast</a> - Weather forecasts from the Global Forecast System (GFS) operated by NOAA NWS NCEP.</li>
     </ul>
   </div>
-Documentation: https://dynamical.org/catalog/gfs/
+Documentation: https://dynamical.org/catalog/models/noaa-gfs/
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
 UpdateFrequency: "NOAA GFS forecast: Forecasts initialized every 6 hours"
