--- a/datasets/dynamical-ecmwf-ifs-ens.yaml
+++ b/datasets/dynamical-ecmwf-ifs-ens.yaml
@@ -16,7 +16,7 @@ Description: |
       <li><a href="https://dynamical.org/catalog/ecmwf-ifs-ens-forecast-15-day-0-25-degree/">ECMWF IFS ENS Forecast, 15 day, 0.25 degree</a> - Ensemble weather forecasts from the ECMWF Integrated Forecasting System (IFS).</li>
     </ul>
   </div>
-Documentation: https://dynamical.org/catalog/ifs-ens/
+Documentation: https://dynamical.org/catalog/models/ecmwf-ifs-ens/
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
 UpdateFrequency: "ECMWF IFS ENS Forecast, 15 day, 0.25 degree: Forecasts initialized every 24 hours"
