--- a/datasets/dynamical-noaa-hrrr.yaml
+++ b/datasets/dynamical-noaa-hrrr.yaml
@@ -15,7 +15,7 @@ Description: |
       <li><a href="https://dynamical.org/catalog/noaa-hrrr-forecast-48-hour/">NOAA HRRR forecast, 48 hour</a> - Weather forecasts from the High Resolution Rapid Refresh (HRRR) model operated by NOAA NWS NCEP.</li>
     </ul>
   </div>
-Documentation: https://dynamical.org/catalog/hrrr/
+Documentation: https://dynamical.org/catalog/models/noaa-hrrr/
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
 UpdateFrequency: "NOAA HRRR forecast, 48 hour: Forecasts initialized every 6 hours"
