update pub url to doi

--- a/datasets/open-targets-platform.yaml
+++ b/datasets/open-targets-platform.yaml
@@ -61,7 +61,7 @@ DataAtWork:
       AuthorURL: https://github.com/opentargets/platform-api
   Publications:
     - Title: Open Targets Platform: facilitating therapeutic hypotheses building in drug discovery
-      URL: https://academic.oup.com/nar/article/53/D1/D1467/7917960?login=true
+      URL: https://doi.org/10.1093/nar/gkae1128
       AuthorName: Annalisa Buniello
       AuthorURL: https://orcid.org/0000-0002-4623-8642
 DeprecatedNotice:
