update pub title

--- a/datasets/open-targets-platform.yaml
+++ b/datasets/open-targets-platform.yaml
@@ -60,7 +60,7 @@ DataAtWork:
       AuthorName: Open Targets
       AuthorURL: https://github.com/opentargets/platform-api
   Publications:
-    - Title: Open Targets Platform: facilitating therapeutic hypotheses building in drug discovery
+    - Title: "Open Targets Platform: facilitating therapeutic hypotheses building in drug discovery"
       URL: https://doi.org/10.1093/nar/gkae1128
       AuthorName: Annalisa Buniello
       AuthorURL: https://orcid.org/0000-0002-4623-8642
