Add US Tidal dataset information to marine-energy-data.yaml

--- a/datasets/marine-energy-data.yaml
+++ b/datasets/marine-energy-data.yaml
@@ -44,6 +44,12 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=marine-energy-data&prefix=umsli%2F)'
+  - Description: "[High Resolution Tidal Hindcast (US Tidal) Dataset](https://mhkdr.openei.org/submissions/632)"
+    ARN: arn:aws:s3:::marine-energy-data/us-tidal/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=marine-energy-data&prefix=us-tidal%2F)'
 DataAtWork:
   Tools & Applications:
   Publications:
