--- a/datasets/igvf-consortium.yaml
+++ b/datasets/igvf-consortium.yaml
@@ -20,7 +20,7 @@ Tags:
   - genetic
   - genomic
   - life sciences
-License: E[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/) You are free to share and adapt tgus data with proper attribution.
+License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)" You are free to share and adapt this data with proper attribution.
 Resources:
   - Description: Released and Archived IGVF Data Files
     ARN: arn:aws:s3:::igvf-public
@@ -32,7 +32,7 @@ Resources:
     Type: SNS Topic
 DataAtWork:
   Tutorials:
-    - Title:Load AnnData files from IGVF into scanpy and view the UMAPs
+    - Title: Load AnnData files from IGVF into scanpy and view the UMAPs
       URL: https://github.com/IGVF-DACC/igvf-data-usage-examples/blob/master/igvf-scanpy.ipynb
       AuthorName: Ben Hitz
       AuthorURL: https://github.com/hitz
