--- a/datasets/igvf-consortium.yaml
+++ b/datasets/igvf-consortium.yaml
@@ -20,7 +20,7 @@ Tags:
   - genetic
   - genomic
   - life sciences
-License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)" You are free to share and adapt this data with proper attribution.
+License: '[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)' You are free to share and adapt this data with proper attribution
 Resources:
   - Description: Released and Archived IGVF Data Files
     ARN: arn:aws:s3:::igvf-public
