--- a/datasets/igvf-consortium.yaml
+++ b/datasets/igvf-consortium.yaml
@@ -20,7 +20,7 @@ Tags:
   - genetic
   - genomic
   - life sciences
-License: '[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)' You are free to share and adapt this data with proper attribution
+License: CC BY 4.0 - https://creativecommons.org/licenses/by/4.0/ - You are free to share and adapt this data with proper attribution
 Resources:
   - Description: Released and Archived IGVF Data Files
     ARN: arn:aws:s3:::igvf-public
@@ -41,10 +41,10 @@ DataAtWork:
       AuthorName: Otto Jolanki
       AuthorURL: https://github.com/ottojolanki
   Tools & Applications:
-      - Title: The IGVF Catalog
-        URL: https://catalog.igvf.org
-        AuthorName: The IGVF Consortium
-        AuthorURL: www.igvf.org
+    - Title: The IGVF Catalog
+      URL: https://catalog.igvf.org
+      AuthorName: The IGVF Consortium
+      AuthorURL: www.igvf.org
   Publications:
     - Title: Deciphering the impact of genomic variation on function
       URL: https://www-nature-com.stanford.idm.oclc.org/articles/s41586-024-07510-0
