ok: Update flab.yaml

--- a/datasets/flab.yaml
+++ b/datasets/flab.yaml
@@ -20,7 +20,7 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: "FLAb tutorial: Benchmarking a protein language model for antibody expression prediction"
-      NotebookURL: https://github.com/Graylab/FLAb/blob/main/examples/FLAb_ZeroShotExample_IgLM_Expression.ipynb
+      URL: https://github.com/Graylab/FLAb/blob/main/examples/FLAb_ZeroShotExample_IgLM_Expression.ipynb
       AuthorName: Michael Chungyoun
       AuthorURL: https://www.linkedin.com/in/mfc12/
   Publications:
