feat: Add new tutorial details for Common Crawl dataset

--- a/datasets/commoncrawl.yaml
+++ b/datasets/commoncrawl.yaml
@@ -19,6 +19,12 @@ Resources:
     AccountRequired: True
 DataAtWork:
   Tutorials:
+    - Title: Get To Know A Dataset - Common Crawl
+      URL: https://github.com/commoncrawl/whirlwind-python-notebook
+      NotebookURL: https://github.com/commoncrawl/whirlwind-python-notebook/blob/main/aws-ccf-dataset.ipynb
+      AuthorName: Common Crawl Foundation
+      AuthorURL: https://commoncrawl.org/
+  Tutorials:
     - Title: Analysing Petabytes of Websites
       URL: http://tech.marksblogg.com/petabytes-of-website-data-spark-emr.html
       AuthorName: Mark Litwintschik
