Update ManagedBy field in gdr-data-lake.yaml

--- a/datasets/gdr-data-lake.yaml
+++ b/datasets/gdr-data-lake.yaml
@@ -10,7 +10,7 @@ Description: |
 
 Documentation: https://github.com/openEDI/documentation/
 Contact:  https://github.com/openEDI/documentation/issues
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency:  As needed
 Collabs:
   ASDI:
