--- a/datasets/oedi-data-lake.yaml
+++ b/datasets/oedi-data-lake.yaml
@@ -8,7 +8,7 @@ Description: |
   analysis and advance innovation.
 Documentation: https://github.com/openEDI/documentation/
 Contact:  https://github.com/openEDI/documentation/issues
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency:  As needed
 Collabs:
   ASDI:
