--- a/datasets/marine-energy-data.yaml
+++ b/datasets/marine-energy-data.yaml
@@ -7,7 +7,7 @@ Description: |
   This data lake is a sister-data lake to the Department of Energy’s Open Energy Data Initiative (OEDI) data lake. 
 Documentation: https://github.com/openEDI/documentation/
 Contact:  https://github.com/openEDI/documentation/issues
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency:  As needed
 Collabs:
   ASDI:
