--- a/datasets/nrel-pds-building-stock.yaml
+++ b/datasets/nrel-pds-building-stock.yaml
@@ -8,7 +8,7 @@ Description: |
   and demand flexibility upgrades applied.
 Documentation: https://www.nrel.gov/buildings/end-use-load-profiles.html
 Contact: ComStock@nrel.gov and ResStock@nrel.gov
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: Twice per year
 Collabs:
   ASDI:
@@ -53,4 +53,5 @@ DataAtWork:
     - Title: "End-Use Load Profiles for the U.S. Building Stock"
       URL: https://www.nrel.gov/docs/fy22osti/80889.pdf
       AuthorName: E. Wilson, A. Parker, A. Fontanini, et al.
+
 
