Update ManagedBy field in dsgrid.yaml
Update NREL to NLR

--- a/datasets/nrel-pds-dsgrid.yaml
+++ b/datasets/nrel-pds-dsgrid.yaml
@@ -7,7 +7,7 @@ Description: |
   production cost models. 
 Documentation: https://www.nrel.gov/analysis/dsgrid.html  
 Contact: elaine.hale@nrel.gov
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: Annually
 Collabs:
   ASDI:
