Update ManagedBy field in nrel-pds-ncdb.yaml
Updated NREL to NLR

--- a/datasets/nrel-pds-ncdb.yaml
+++ b/datasets/nrel-pds-ncdb.yaml
@@ -8,7 +8,7 @@ Description: |
   important climate scenarios.  
 Documentation: https://nsrdb.nrel.gov/
 Contact: Manajit.Sengupta@nrel.gov
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: As needed
 Collabs:
   ASDI:
