--- a/datasets/nrel-pds-nsrdb.yaml
+++ b/datasets/nrel-pds-nsrdb.yaml
@@ -9,7 +9,7 @@ Description: |
   spatial scales to accurately represent regional solar radiation climates.
 Documentation: https://nsrdb.nrel.gov/
 Contact: nsrdb@nrel.gov
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: Annually
 Collabs:
   ASDI:
@@ -124,3 +124,4 @@ DataAtWork:
     - Title: Physics-guided machine learning for improved accuracy of the National Solar Radiation Database
       URL: https://www.sciencedirect.com/science/article/abs/pii/S0038092X22000044
       AuthorName: Grant Buster, Mike Bannister, Aron Habte, Dylan Hettinger, Galen Maclaurin, Michael Rossol, Manajit Sengupta, Yu Xie
+
